--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
   compileOnly group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '6.0.0'
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+  compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
 }
 
 test {
