--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
   compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.27'
 }
 
 test {
