--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
   implementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
 
   implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
+
+  implementation group: 'com.opencsv', name: 'opencsv', version: '5.7.1'
 }
 
 test {
