--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
   implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
 
   implementation group: 'com.opencsv', name: 'opencsv', version: '5.7.1'
+
+  implementation group: 'org.yaml', name: 'snakeyaml', version: '2.0'
 }
 
 test {
