feat development [+] simple tests

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ tasks.withType(JavaCompile).configureEach {
   options.encoding = 'UTF-8'
 }
 
+compileJava {options.encoding = "UTF-8"}
+
 dependencies {
   compileOnly group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '6.0.0'
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
