--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ dependencies {
   implementation group: 'com.opencsv', name: 'opencsv', version: '5.7.1'
 
   implementation group: 'org.yaml', name: 'snakeyaml', version: '2.0'
+
+  implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
 }
 
 test {
