--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
   testImplementation("org.mockito:mockito-inline:${mockitoversion}")
   testImplementation("org.mockito:mockito-junit-jupiter:${mockitoversion}")
+  testImplementation 'org.assertj:assertj-core:3.24.2'
 
   compileOnly 'org.projectlombok:lombok:1.18.28'
   annotationProcessor 'org.projectlombok:lombok:1.18.28'
