--- a/build.gradle
+++ b/build.gradle
@@ -51,9 +51,12 @@ dependencies {
 
   implementation group: 'org.yaml', name: 'snakeyaml', version: '2.0'
 
-  implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
+  implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
 
   implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
+
+  implementation group: 'org.aspectj', name: 'aspectjrt', version: '1.9.20.1'
+  implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.20.1'
 }
 
 test {
