--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
   id 'java'
   id 'war'
+  id("io.freefair.aspectj.post-compile-weaving") version "8.4"
 }
 
 group 'by.clevertec.klimov'
@@ -38,6 +39,7 @@ dependencies {
 
   implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
   implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.7'
+  implementation('org.apache.logging.log4j:log4j-core:2.20.0')
 
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.27'
 
