--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ datasource:
   user: "postgres"
   password: "123456789"
   driver-class-name: "org.postgresql.Driver"
-  isInitDb: true
+  isInitDb: false
 
 paths:
   accounts: "src/main/resources/csv/accounts.csv"
